CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(MESHPOTATO)
ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(bin)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(python)
ADD_SUBDIRECTORY(pymeshpotato)
SET(CMAKE_INSTALL_PREFIX ../install)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
