ADD_SUBDIRECTORY(MPUtils)
ADD_SUBDIRECTORY(MPPlugins)
ADD_SUBDIRECTORY(MPVolume)
ADD_SUBDIRECTORY(MPMesh)
ADD_SUBDIRECTORY(MPNoise)
INSTALL(DIRECTORY MPUtils DESTINATION include/MeshPotato FILES_MATCHING PATTERN "*.h")
INSTALL(DIRECTORY MPPlugins DESTINATION include/MeshPotato FILES_MATCHING PATTERN "*.h")
INSTALL(DIRECTORY MPVolume DESTINATION include/MeshPotato FILES_MATCHING PATTERN "*.h")
INSTALL(DIRECTORY MPMesh DESTINATION include/MeshPotato FILES_MATCHING PATTERN "*.h")
INSTALL(DIRECTORY MPNoise DESTINATION include/MeshPotato FILES_MATCHING PATTERN "*.h")
