INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include
      ${OPENVDB_INCLUDE_DIRS}
      ${Boost_INCLUDE_DIRS}
      ${OPENEXR_INCLUDE_DIRS}
      ${HALF_INCLUDE_DIRS}
      ${OPENIMAGEIO_INCLUDE_DIRS}
      ${TBB_INCLUDE_DIRS}
      ${FFTW_INCLUDE_DIRS}
  )
GET_DIRECTORY_PROPERTY(MP_SRC
    DIRECTORY ${CMAKE_SOURCE_DIR}/src
    DEFINITION MP_SRC)
MESSAGE("Retrieved SRC = " ${MP_SRC})
ADD_LIBRARY(meshpotato SHARED ${MP_SRC})

TARGET_LINK_LIBRARIES(meshpotato
        ${OPENVDB_LIBRARIES}
        ${Boost_LIBRARIES}
        ${OPENEXR_LIBRARIES}
        ${HALF_LIBRARIES}
        ${OPENIMAGEIO_LIBRARIES}
        ${TBB_LIBRARIES}
        ${FFTW_LIBRARIES}
        ${PYTHON_LIBRARIES}
  )
INSTALL(TARGETS meshpotato DESTINATION lib)
