GET_DIRECTORY_PROPERTY(MP_SRC
    DIRECTORY ${CMAKE_SOURCE_DIR}/src
    DEFINITION MP_SRC)
MESSAGE("Retrieved SRC = " ${MP_SRC})
ADD_LIBRARY(meshpotato SHARED ${MP_SRC})
ADD_LIBRARY(meshpotato_static STATIC ${MP_SRC})

TARGET_LINK_LIBRARIES(meshpotato
        ${OPENVDB_LIBRARIES}
        ${Boost_LIBRARIES}
        ${OPENEXR_LIBRARIES}
        ${HALF_LIBRARIES}
        ${OPENIMAGEIO_LIBRARIES}
        ${TBB_LIBRARIES}
        ${FFTW_LIBRARIES}
        ${PYTHON_LIBRARIES}
        ${HDF5_LIBRARIES}
  )

  TARGET_LINK_LIBRARIES(meshpotato_static
          ${OPENVDB_LIBRARIES}
          ${Boost_LIBRARIES}
          ${OPENEXR_LIBRARIES}
          ${HALF_LIBRARIES}
          ${OPENIMAGEIO_LIBRARIES}
          ${TBB_LIBRARIES}
          ${FFTW_LIBRARIES}
          ${PYTHON_LIBRARIES}
        ${HDF5_LIBRARIES}
    )
INSTALL(TARGETS meshpotato DESTINATION lib)
INSTALL(TARGETS meshpotato_static DESTINATION lib)
