SET(MESHVIEWER_INCLUDE FILES_MATCHING PATTERN "*.h")
FILE(GLOB MESHVIEWER_SOURCE "*.cpp")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include
	${MESHVIEWER_INCLUDE}
	${GLEW_INCLUDE_PATH}
	${OPENGL_INCLUDE_DIR}
	${GLUT_INCLUDE_DIR}
	${OPENVDB_INCLUDE_DIRS}
	${Boost_INCLUDE_DIRS}
	${OPENIMAGEIO_INCLUDE_DIRS}
	${OPENEXR_INCLUDE_DIR}
	${TBB_INCLUDE_DIR}
)
# LINK_DIRECTORIES(
# 	${CMAKE_SOURCE_DIR}/lib
# )
ADD_EXECUTABLE(meshviewer ${MESHVIEWER_SOURCE})
TARGET_LINK_LIBRARIES(meshviewer meshpotato 
	${OPENGL_LIBRARIES}
	${OPENVDB_LIBRARIES}
	${GLEW_LIBRARY}
	${GLUT_LIBRARIES}
        ${Boost_LIBRARIES}
	${OPENIMAGEIO_LIBRARIES}
)
INSTALL(TARGETS meshviewer DESTINATION bin)
