FILE(GLOB MESHVIEWER_SOURCE "*.cpp")

ADD_EXECUTABLE(meshviewer ${MESHVIEWER_SOURCE})
TARGET_LINK_LIBRARIES(meshviewer meshpotato 
	${OPENGL_LIBRARIES}
	${OPENVDB_LIBRARIES}
	${GLEW_LIBRARY}
	${GLUT_LIBRARIES}
        ${Boost_LIBRARIES}
	${OPENIMAGEIO_LIBRARIES}
)
INSTALL(TARGETS meshviewer DESTINATION bin)
