#Glob the source code
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

SET(Boost_NEEDED_LIBS filesystem
                      python
                      thread
                      system
                      )
SET(Boost_USE_STATIC_LIBS     OFF)
#SET(Boost_USE_MULTITHREADED    ON)
SET(Boost_USE_STATIC_RUNTIME     OFF)

FIND_PACKAGE(OpenVDB REQUIRED)
FIND_PACKAGE(Boost COMPONENTS ${Boost_NEEDED_LIBS} REQUIRED)
FIND_PACKAGE(OpenEXR REQUIRED)
FIND_PACKAGE(OpenImageIO REQUIRED)
FIND_PACKAGE(TBB REQUIRED)
FIND_PACKAGE(Half REQUIRED)
FIND_PACKAGE(PythonLIBS)
FIND_PACKAGE(FFTW REQUIRED)


SET(PLUGIN_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/include
      ${OPENVDB_INCLUDE_DIRS}
      ${OPENVDB_INCLUDE_PYTHON_DIRS}
      ${Boost_INCLUDE_DIRS}
      ${OPENEXR_INCLUDE_DIRS}
      ${HALF_INCLUDE_DIRS}
      ${OPENIMAGEIO_INCLUDE_DIRS}
      ${TBB_INCLUDE_DIRS}
      ${PYTHON_INCLUDE_PATH}
      ${FFTW_INCLUDES})
SET(PLUGIN_LIBRARY_DIRS meshpotato
      ${OPENVDB_LIBRARIES}
      ${OPENVDB_PYTHON_LIBRARY}
      ${PYTHON_LIBRARIES}
      ${Boost_LIBRARIES}
      ${OPENEXR_LIBRARIES}
      ${HALF_LIBRARIES}
      ${OPENIMAGEIO_LIBRARIES}
      ${TBB_LIBRARIES}
      ${FFTW_LIBRARIES})
INCLUDE_DIRECTORIES(${PLUGIN_INCLUDE_DIRS})

ADD_SUBDIRECTORY(OBJOutput)
ADD_SUBDIRECTORY(OBJInput)
#ADD_SUBDIRECTORY(ABCOutput)
