#Glob the source code
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

SET(Boost_NEEDED_LIBS filesystem
                      python
                      thread
                      system
                      )
SET(Boost_USE_STATIC_LIBS     OFF)
#SET(Boost_USE_MULTITHREADED    ON)
SET(Boost_USE_STATIC_RUNTIME     OFF)

FIND_PACKAGE(OpenVDB REQUIRED)
FIND_PACKAGE(Boost COMPONENTS ${Boost_NEEDED_LIBS} REQUIRED)
FIND_PACKAGE(OpenEXR REQUIRED)
FIND_PACKAGE(OpenImageIO REQUIRED)
FIND_PACKAGE(TBB REQUIRED)
FIND_PACKAGE(Half REQUIRED)
FIND_PACKAGE(PythonLIBS)
FIND_PACKAGE(FFTW REQUIRED)

MESSAGE("Openvdb python lib: " ${OPENVDB_PYTHON_LIBRARY})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include
      ${OPENVDB_INCLUDE_DIRS}
      ${OPENVDB_INCLUDE_PYTHON_DIRS}
      ${Boost_INCLUDE_DIRS}
      ${OPENEXR_INCLUDE_DIRS}
      ${HALF_INCLUDE_DIRS}
      ${OPENIMAGEIO_INCLUDE_DIRS}
      ${TBB_INCLUDE_DIRS}
      ${PYTHON_INCLUDE_PATH}
      ${FFTW_INCLUDES}
  )
#Add MeshPotato library

#LINK_LIBRARIES(${CMAKE_SOURCE_DIR}/lib/meshpotato)

#Build MPMesh
SET(PYMPMESH_SRC mpmesh.C )
#Build MPNoise
SET(PYMPNOISE_SRC mpnoise.C)

#Build MPUtils
SET(PYMPUTILS_SRC mputils.C)

#Build MPVolume
SET(PYMPVOLUME_SRC mpvolume.C)

ADD_LIBRARY(mpmesh MODULE ${PYMPMESH_SRC})
SET_TARGET_PROPERTIES(mpmesh PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(mpmesh PROPERTIES SUFFIX ".so")
TARGET_LINK_LIBRARIES(mpmesh meshpotato
      ${OPENVDB_LIBRARIES}
      ${OPENVDB_PYTHON_LIBRARY}
      ${PYTHON_LIBRARIES}
      ${Boost_LIBRARIES}
      ${OPENEXR_LIBRARIES}
      ${HALF_LIBRARIES}
      ${OPENIMAGEIO_LIBRARIES}
      ${TBB_LIBRARIES}
      ${FFTW_LIBRARIES}
  )
INSTALL(TARGETS mpmesh DESTINATION pymeshpotato)

ADD_LIBRARY(mpvolume MODULE ${PYMPVOLUME_SRC})
SET_TARGET_PROPERTIES(mpvolume PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(mpvolume PROPERTIES SUFFIX ".so")
TARGET_LINK_LIBRARIES(mpvolume meshpotato
    ${OPENVDB_LIBRARIES}
    ${OPENVDB_PYTHON_LIBRARY}
    ${PYTHON_LIBRARIES}
    ${Boost_LIBRARIES}
    ${OPENEXR_LIBRARIES}
    ${HALF_LIBRARIES}
    ${OPENIMAGEIO_LIBRARIES}
    ${TBB_LIBRARIES}
    ${FFTW_LIBRARIES}
  )
INSTALL(TARGETS mpvolume DESTINATION pymeshpotato)

ADD_LIBRARY(mputils MODULE ${PYMPUTILS_SRC})
SET_TARGET_PROPERTIES(mputils PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(mputils PROPERTIES SUFFIX ".so")
TARGET_LINK_LIBRARIES(mputils meshpotato
    ${OPENVDB_LIBRARIES}
    ${OPENVDB_PYTHON_LIBRARY}
    ${PYTHON_LIBRARIES}
    ${Boost_LIBRARIES}
    ${OPENEXR_LIBRARIES}
    ${HALF_LIBRARIES}
    ${OPENIMAGEIO_LIBRARIES}
    ${TBB_LIBRARIES}
    ${FFTW_LIBRARIES}
  )
INSTALL(TARGETS mputils DESTINATION pymeshpotato)

ADD_LIBRARY(mpnoise MODULE ${PYMPNOISE_SRC})
SET_TARGET_PROPERTIES(mpnoise PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(mpnoise PROPERTIES SUFFIX ".so")
TARGET_LINK_LIBRARIES(mpnoise meshpotato
    ${OPENVDB_LIBRARIES}
    ${OPENVDB_PYTHON_LIBRARY}
    ${PYTHON_LIBRARIES}
    ${Boost_LIBRARIES}
    ${OPENEXR_LIBRARIES}
    ${HALF_LIBRARIES}
    ${OPENIMAGEIO_LIBRARIES}
    ${TBB_LIBRARIES}
    ${FFTW_LIBRARIES}
  )
INSTALL(TARGETS mpnoise DESTINATION pymeshpotato)
