FIND_PACKAGE(Boost COMPONENTS ${Boost_NEEDED_LIBS} REQUIRED)
FIND_PACKAGE(PythonLIBS)
Find_PACKAGE(Alembic)
SET(Boost_NEEDED_LIBS filesystem
                      python
                      thread
                      system
                      )
SET(PLUGIN_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/include
      ${Boost_INCLUDE_DIRS}
      ${PYTHON_INCLUDE_PATH}
      ${ALEMBIC_INCLUDE_DIRS}
  )
SET(PLUGIN_LIBRARY_DIRS meshpotato
      ${PYTHON_LIBRARIES}
      ${Boost_LIBRARIES}
      ${ALEMBIC_LIBRARIES}
  )
INCLUDE_DIRECTORIES(${PLUGIN_INCLUDE_DIRS})

ADD_DEFINITIONS( "-std=c++11" )

SET(ABCOUTPUT_SRC ABCOutputPlugin.C)
#SET(OBJINPUT_PYTHON_SRC pyOBJInputPlugin.C)

ADD_LIBRARY(abcoutput SHARED ${ABCOUTPUT_SRC})
TARGET_LINK_LIBRARIES(abcoutput ${PLUGIN_LIBRARY_DIRS})
INSTALL(TARGETS abcoutput DESTINATION lib)

#ADD_LIBRARY(pyOBJInputPlugin MODULE ${OBJINPUT_PYTHON_SRC})
#SET_TARGET_PROPERTIES(pyOBJInputPlugin PROPERTIES PREFIX "")
#SET_TARGET_PROPERTIES(pyOBJInputPlugin PROPERTIES SUFFIX ".so")
#TARGET_LINK_LIBRARIES(pyOBJInputPlugin meshpotato ${PLUGIN_LIBRARY_DIRS})
#INSTALL(TARGETS pyOBJInputPlugin DESTINATION pymeshpotato)
