# SET(PLUGIN_LIBRARY_DIRS meshpotato
#       ${PYTHON_LIBRARIES}
#       ${Boost_LIBRARIES}
#       ${ALEMBIC_LIBRARIES}
#   )
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

ADD_DEFINITIONS( "-std=c++11" )

SET(ABCOUTPUT_SRC ABCOutputPlugin.C)
#SET(OBJINPUT_PYTHON_SRC pyOBJInputPlugin.C)

ADD_LIBRARY(abcoutput SHARED ${ABCOUTPUT_SRC})
TARGET_LINK_LIBRARIES(abcoutput ${PLUGIN_LIBRARY_DIRS})
INSTALL(TARGETS abcoutput DESTINATION lib)

#ADD_LIBRARY(pyOBJInputPlugin MODULE ${OBJINPUT_PYTHON_SRC})
#SET_TARGET_PROPERTIES(pyOBJInputPlugin PROPERTIES PREFIX "")
#SET_TARGET_PROPERTIES(pyOBJInputPlugin PROPERTIES SUFFIX ".so")
#TARGET_LINK_LIBRARIES(pyOBJInputPlugin meshpotato ${PLUGIN_LIBRARY_DIRS})
#INSTALL(TARGETS pyOBJInputPlugin DESTINATION pymeshpotato)
