SET(PLUGIN_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/include
      ${Boost_INCLUDE_DIRS}
      ${HALF_INCLUDE_DIRS}
      ${ALEMBIC_INCLUDE_DIRS}
      ${PYTHON_INCLUDE_PATH}
      ${HDF5_INCLUDE_DIR}
  )
SET(PLUGIN_LIBRARY_DIRS meshpotato
      ${PYTHON_LIBRARIES}
      ${HALF_LIBRARIES}
      ${Boost_LIBRARIES}
      ${HDF5_HL_LIBRARY}
      ${HDF5_LIBRARY}
      ${HDF5_LIBRARY_DIRS}
      ${ALEMBIC_LIBRARIES}
  )
  message("\n\n\nTEST: ${PLUGIN_LIBRARY_DIRS}")

INCLUDE_DIRECTORIES(${PLUGIN_INCLUDE_DIRS})

SET(ABCOUTPUT_SRC ABCOutputPlugin.C)
#SET(ABCOUTPUT_PYTHON_SRC pyABCOutputPlugin.C)

ADD_LIBRARY(abcoutput SHARED ${ABCOUTPUT_SRC})
TARGET_LINK_LIBRARIES(abcoutput meshpotato ${PLUGIN_LIBRARY_DIRS})
INSTALL(TARGETS abcoutput DESTINATION lib)

#ADD_LIBRARY(pyABCOutputPlugin MODULE ${ABCOUTPUT_PYTHON_SRC})
#SET_TARGET_PROPERTIES(pyABCOutputPlugin PROPERTIES PREFIX "")
#SET_TARGET_PROPERTIES(pyABCOutputPlugin PROPERTIES SUFFIX ".so")
#TARGET_LINK_LIBRARIES(pyABCOutputPlugin meshpotato ${PLUGIN_LIBRARY_DIRS})
#INSTALL(TARGETS pyABCOutputPlugin DESTINATION pymeshpotato)
