SET(PLUGIN_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/include
      ${Boost_INCLUDE_DIRS}
      ${PYTHON_INCLUDE_PATH}
  )
SET(PLUGIN_LIBRARY_DIRS meshpotato
      ${PYTHON_LIBRARIES}
      ${Boost_LIBRARIES}
  )
INCLUDE_DIRECTORIES(${PLUGIN_INCLUDE_DIRS})



SET(VDBINPUT_SRC VDBInputPlugin.C)
SET(VDBINPUT_PYTHON_SRC pyVDBInputPlugin.C)

ADD_LIBRARY(vdbinput SHARED ${VDBINPUT_SRC})
TARGET_LINK_LIBRARIES(vdbinput meshpotato)
INSTALL(TARGETS vdbinput DESTINATION lib)

ADD_LIBRARY(pyVDBInputPlugin MODULE ${VDBINPUT_PYTHON_SRC})
SET_TARGET_PROPERTIES(pyVDBInputPlugin PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(pyVDBInputPlugin PROPERTIES SUFFIX ".so")
TARGET_LINK_LIBRARIES(pyVDBInputPlugin meshpotato ${PLUGIN_LIBRARY_DIRS})
INSTALL(TARGETS pyVDBInputPlugin DESTINATION pymeshpotato)
