SET(PLUGIN_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/include
      ${Boost_INCLUDE_DIRS}
      ${PYTHON_INCLUDE_PATH}
  )
SET(PLUGIN_LIBRARY_DIRS meshpotato
      ${PYTHON_LIBRARIES}
      ${Boost_LIBRARIES}
  )
INCLUDE_DIRECTORIES(${PLUGIN_INCLUDE_DIRS})



SET(VDBOUTPUT_SRC VDBOutputPlugin.C)
SET(VDBOUTPUT_PYTHON_SRC pyVDBOutputPlugin.C)

ADD_LIBRARY(vdboutput SHARED ${VDBOUTPUT_SRC})
TARGET_LINK_LIBRARIES(vdboutput meshpotato)
INSTALL(TARGETS vdboutput DESTINATION lib)

ADD_LIBRARY(pyVDBOutputPlugin MODULE ${VDBOUTPUT_PYTHON_SRC})
SET_TARGET_PROPERTIES(pyVDBOutputPlugin PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(pyVDBOutputPlugin PROPERTIES SUFFIX ".so")
TARGET_LINK_LIBRARIES(pyVDBOutputPlugin meshpotato ${PLUGIN_LIBRARY_DIRS})
INSTALL(TARGETS pyVDBOutputPlugin DESTINATION pymeshpotato)
